rewrite some check() decorator with another rule for some controllers

--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -19,7 +19,7 @@
       $scope.sendMessage = function(email) {
           $scope.disableButton()
           return $ok($scope.password_reset_request, {email:email}, function(password_reset_request){
-                window.location.href = '{{ url_for('reader.list_reader') }}'
+                window.location.href = '{{ url_for('auth.login_signup_endpoint') + '?login_signup=login' }}'
           })
       }
     });
