--- a/profapp/templates/front/bird/layout.html
+++ b/profapp/templates/front/bird/layout.html
@@ -16,7 +16,7 @@
             window.location.reload();
             }
     }, false);
-    $('body').prepend('<iframe style="positin: absolute; width: 1px; height: 1px; visibility: none; left: -1px;" src="https://profireader.com/tools/SSO/'+$.cookie('beaker.session.id')+'/"></iframe>');
+    $('body').prepend('<iframe style="position: absolute; width: 1px; height: 1px; visibility: none; left: -1px;" src="https://profireader.com/tools/SSO/'+$.cookie('beaker.session.id')+'/"></iframe>');
 </script>
 
 
