--- a/profapp/static/front/css/style.css
+++ b/profapp/static/front/css/style.css
@@ -194,6 +194,7 @@ footer .btn-social-icon {
 .block-item.full-block-info{
     padding: 15px;
     height: auto;
+    width: 728px;
 }
 
 .block-item img{
