few bugs + tags position

--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -5,7 +5,7 @@
     {% include '_ruslan/partials/_header_files_grid.html' %}
 {% endblock head %}
 
-{% block title %}Profireader - Publications{% endblock title %}
+{% block title %}Profireader - {{ _('Publications') }}{% endblock title %}
 
 {% block portal_content %}
 
