--- a/profapp/templates/front/forester/footer.html
+++ b/profapp/templates/front/forester/footer.html
@@ -17,8 +17,7 @@
                 </ul>
             </div>
 
-            <div class="copiright">
-                <p>Powered by ProfiReader.com</p>
+            <div class="copiright">{{ _("Powered by") }} <a href="/">https://profireader.com/</a></div>
             </div>
 
         </div>
