--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -57,7 +57,7 @@
 
                             <a pr-test="ArticlePortal" target="_blank"
                                href="//{{ article.portal.host}}/_c/{{ article.company.id}}/{{ article.company.name}}"
-                               class="item-company">{{ article.portal.name}}</a>-><a pr-test="ArticleDivision"
+                               class="item-company">{{ article.company.name}}</a>-><a pr-test="ArticleDivision"
                                                                                      target="_blank"
                                                                                      href="//{{ article.portal.host }}/{{ article.division.name}}/1/?search_text=">{{
                             article.division.name}}</a>
