--- a/profapp/templates/front/forester/footer.html
+++ b/profapp/templates/front/forester/footer.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
 
-            <div class="copiright">{{ _("Powered by") }} <a href="/">https://profireader.com/</a></div>
+            <div class="copiright">{{ _("Powered by") }} <a href="//profireader.com/">Profireader.com</a></div>
             </div>
 
         </div>
