--- a/profapp/templates/front/forester/articles-list.html
+++ b/profapp/templates/front/forester/articles-list.html
@@ -52,11 +52,11 @@
             <span class="tag-in-article">
                     {% if article['tags'] %}<span
                         class="label label-danger item-tags fr"><a href="{{ url_for('front.division',
-                        division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0]
+                        division_name=article['division']['name'], tag=article.tags[0].text) }}">{{ article.tags[0]
                         .text }}</a></span>
                     {% endif %}
             </span>
-            <a href="{{ url_for('front.division', division_name=article['division']['name'], page=1, search_text='') }}">{{ article['division']['name']|safe }}</a>
+            <a href="{{ url_for('front.division', division_name=article['division']['name']) }}">{{ article['division']['name']|safe }}</a>
         </div>
         <h2 class="item-title">
             <a href="{{ url_for('front.details', article_portal_division_id=article['id']) }}">{{ article['title']|safe }}</a>
