--- a/profapp/templates/front/spring/articles-list.html
+++ b/profapp/templates/front/spring/articles-list.html
@@ -46,7 +46,7 @@
 {% for article_id, article in articles.items() %}
     <div class="block-item list-elements">
         <div class="item-type article">
-            <a href="{{ url_for('front.division', division_name=article['division']['name'], page=1, search_text='') }}">{{ article['division']['name']|safe }}</a>
+            <a href="{{ url_for('front.division', division_name=article['division']['name']) }}">{{ article['division']['name']|safe }}</a>
         </div>
         <h2 class="item-title">
             <a href="{{ url_for('front.details', article_portal_division_id=article['id']) }}">{{ article['title']|safe }}</a>
