--- a/profapp/templates/front/forester/articles-list.html
+++ b/profapp/templates/front/forester/articles-list.html
@@ -68,7 +68,7 @@
             </script>
         </div>
         <div class="item-additional-info">
-            <a href="{{ url_for('front.subportal', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
+            <a href="{{ url_for('front.company_member', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
                class="item-company">{{ article['company']['name']|safe }}</a>
             <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
             <div><br>
