--- a/profapp/templates/front/forester/nav.html
+++ b/profapp/templates/front/forester/nav.html
@@ -27,7 +27,7 @@
                     {% if division.portal_division_type_id != 'index' %}
                         <li {% if division.id == current_division.id %}class="active"{% endif %}>
                             <a href="{% if division.portal_division_type_id != 'company_subportal' %}
-                                {{ url_for('front.division', division_name=division.name) }}{% else %}{{ url_for('front.subportal', member_company_id = division['member_company']['id'] ,
+                                {{ url_for('front.division', division_name=division.name) }}{% else %}{{ url_for('front.company_member', member_company_id = division['member_company']['id'] ,
                                         member_company_name = division['member_company']['name']) }} {% endif %}">{{ division.name }}</a>
                         </li>
                     {% endif %}
