--- a/profapp/templates/front/bird/catalog.html
+++ b/profapp/templates/front/bird/catalog.html
@@ -3,7 +3,6 @@
 {% block content %}
 
     {% for member_id, member in members.items() %}
-
         <div class="block-item company-item">
 
         {% if member['tags'] %}
@@ -20,6 +19,12 @@
             <a href="{{ url_for('front.subportal', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}"
                href>{{ member['company']['name'] }}</a><br/><br/>
             {{ member['company']['short_description']|safe }}
+            {%  if member['company']['country'] != '' %}
+            <span>{{ __('Country') }}: {{ member['company']['country']|safe }}</span></br>
+            {% endif %}
+            {%  if member['company']['city'] != '' %}
+            <span>{{ __('City') }}: {{ member['company']['city']|safe }}</span>
+            {% endif %}
         </div>
 
     {% endfor %}
