association proxy for image files

--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -98,7 +98,7 @@
 
                 <div style="padding-bottom: 50px">
                     <div>
-                        <div style="width: 400px; height: 300px; position: relative" pr-crop="data.material.image"></div>
+                        <div style="width: 400px; height: 300px; position: relative" pr-crop="data.material.illustration"></div>
                     </div>
                 </div>
 
