--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -64,7 +64,7 @@
                     {
                         name: 'title', category:"searching",  width: '30%',
                         type: 'link', cellStyle:"getBackground(row)",
-                        img: 'image_file_id',
+                        img_url: 'illustration.url',
                         href: 'url_material_details({company_id:grid.appScope.company.id,material_id:row.entity.id})'
                     },{
                         name: 'editor.profireader_name', category:"searching"
