--- a/profapp/templates/front/forester/nav.html
+++ b/profapp/templates/front/forester/nav.html
@@ -19,7 +19,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="centred">
-                <a class="logo" href="/"><img {{ prImage(portal.logo_file_id)}}  alt="Portal logo" class="block-item-img"></a>
+                <a class="logo" href="/"><img {{ prImage(portal.logo_file_id)}}  alt="Portal logo" class="block-item-img bg-contain"></a>
             </div>
 
             <ul class="nav navbar-nav">
