--- a/profapp/static/front/css/style.css
+++ b/profapp/static/front/css/style.css
@@ -120,13 +120,13 @@ h1, h2, h3, h4, h5, h6 {
     /*font-size: 15px;*/
 
 }
-  hr {
+   .hr {
       border: 0;
 	  border-bottom: 6px solid #e1e1e1;
 	  margin: auto;
 	  width: 989px;
       padding-left: 1px;
-  }
+     }
 .logo {
     display: block;
     position: absolute;
