--- a/profapp/static/front/css/style.css
+++ b/profapp/static/front/css/style.css
@@ -120,13 +120,13 @@ h1, h2, h3, h4, h5, h6 {
     /*font-size: 15px;*/
 
 }
-   .hr {
+      hr {
       border: 0;
 	  border-bottom: 6px solid #e1e1e1;
 	  margin: auto;
 	  width: 989px;
       padding-left: 1px;
-     }
+          }
 .logo {
     display: block;
     position: absolute;
@@ -175,7 +175,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .site-content {
     background-color: #E1E1E1;
-    padding-top: 30px;
+    padding-top: 15px;
 }
 .site-content h1{
     color: #424242;
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
     width: auto;
     position: absolute;
     text-align: right;
-    padding: 15px;
+    padding: 5px;
 }
 
 footer .social-block {
