front: member company page

--- a/profapp/templates/front/forester/bak.layout-wbg.html
+++ b/profapp/templates/front/forester/bak.layout-wbg.html
@@ -24,7 +24,7 @@
 
     <div class="row site-content">
         {% if member_company %}
-            {% include 'subportal_nav.html' %}
+            {% include 'company_nav.html' %}
         {% endif %}
 
         <!-- Blog Entries Column -->
