--- a/profapp/templates/front/forester/bak.layoutfw.html
+++ b/profapp/templates/front/forester/bak.layoutfw.html
@@ -26,7 +26,7 @@
     <div class="row site-content">
 
         {% if member_company %}
-            {% include 'subportal_nav.html' %}
+            {% include 'company_nav.html' %}
         {% endif %}
 
 
