--- a/profapp/static/front/css/style.css
+++ b/profapp/static/front/css/style.css
@@ -115,18 +115,19 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 15px;
 }
 
-.nav.navbar-nav * {
+.nav.navbar-nav  {
     /*position:relative; right:100px;*/
     /*font-size: 15px;*/
 
 }
-      hr {
-      border: 0;
-	  border-bottom: 6px solid #e1e1e1;
-	  margin: auto;
-	  width: 989px;
-      padding-left: 1px;
-          }
+  .border-limiter {
+          border: 0;
+          border-bottom: 6px solid #e1e1e1;
+          margin: auto;
+          width: 989px;
+          padding-left: 1px;
+  }
+
 .logo {
     display: block;
     position: absolute;
@@ -140,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
     top: -60px;
 }
 
-.fixed .logo {
+.fixed.logo {
     display: block;
     position: relative;
     width: 79px;
