--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -124,7 +124,7 @@
                                 class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
                         <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Help information') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-info"></i><span>{{ _('Help information') }}</span></a></li>
-                        <li class="info-padding"><a pr_test="tutorial" href="{{ url_tutorial() }}" title="{{ _('tutorial') }}"
+                        <li class="info-padding"><a pr_test="Tutorial" href="{{ url_tutorial() }}" title="{{ _('tutorial') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
 
                         <li class="dropdown"><a class="dropbtn" title="{{ _('Language') }}"><i class="fa fa-language"></i><span>{{ _('Language') }}</span></a>
