--- a/profapp/templates/front/bird/nav.html
+++ b/profapp/templates/front/bird/nav.html
@@ -37,7 +37,7 @@
                 </ul>
             </div>
         </div>
-        <hr>
+        <hr class ="border-limiter"/>
     </div>
 </nav>
 
