--- a/profapp/templates/front/forester/nav.html
+++ b/profapp/templates/front/forester/nav.html
@@ -2,7 +2,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="well">
         <div class="social-block">
-            {% include 'search_block.html' %}
             {% include 'user_profile.html' %}
             {#        {% include 'social.html' %}#}
             {% include 'subscribe_to_portal.html' %}
@@ -37,7 +36,7 @@
                 </ul>
             </div>
         </div>
-        <hr>
+        <hr class ="border-limiter"/>
     </div>
 </nav>
 
