--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -26,7 +26,7 @@
 
         <span ng-if="browsable" ng-click="chooseImage(true)" class="btn btn-primary docs-tooltip"
               ng-class="{'btn-success': prCrop['selected_by_user']['type'] == 'browse'}"
-              title="Chose image"><span class="glyphicon glyphicon-folder-open"></span></span>
+              title="Choose image"><span class="glyphicon glyphicon-folder-open"></span></span>
 
 
         <label ng-if="uploadable" class="btn btn-primary btn-upload"
