--- a/profapp/templates/company/company_readers.html
+++ b/profapp/templates/company/company_readers.html
@@ -37,16 +37,16 @@ th, td {
         $scope.$$translate = {{ translates('CompanyReaders')|safe }};
         $scope.own_company_id = '{{ company.id }}';
         $scope.get_readers = {{ raw_url_for('company.readers_load')|safe }};
+        $scope.get_link_user_profile = {{ raw_url_for('user.profile')|safe }};
 
         {% raw %}
 
         $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
              urlLoadGridData: $scope.get_readers({company_id: $scope.own_company_id}),
              columnDefs: [
-                 { name: 'profireader_first_name', enableSorting: false,enableCellEdit: false, enableColumnMenu: false, displayName: 'First Name', width: '35%',
+                 { name: 'profireader_first_name', type: 'link', href:'get_link_user_profile({user_id : row.entity.id})', enableSorting: false,enableCellEdit: false, enableColumnMenu: false, displayName: 'User profile', width: '35%',
                      filter: {type:'input'}
                  },
-                 { name: 'id',enableCellEdit: false, displayName: 'Id', filter: {type:'input'}},
                  { name: 'profireader_email', enableSorting: false,enableCellEdit: false, enableColumnMenu: false, displayName: 'Email',
                      filter: {type:'input'}
                  },
@@ -68,6 +68,7 @@ th, td {
             <div class="well grid-loading" ng-show="loading">
               <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
             </div>
+
         </div>
     </div>
 {% endblock portal_content %}
