--- a/profapp/templates/front/bird/articles-list.html
+++ b/profapp/templates/front/bird/articles-list.html
@@ -1,3 +1,12 @@
+
+{% block search %}{% endblock search %}
+{% block content_left %}{% include 'search_block.html' %}
+    <a href="#" class="right_banner_1">{{ portal.advs['right_banner_1']|safe }}</a>
+    <a href="#" class="right_banner_2">{{ portal.advs['right_banner_2']|safe }}</a>
+{% endblock content_left %}
+
+
+
 {# цикл статей і баннери між ними з функцією пошуку #}
 <script>
     var searchText = {{ search_text|tojson }};
@@ -55,9 +64,10 @@
             <a href="{{ url_for('front.division', division_name=article['division']['name']) }}">{{ article['division']['name']|safe }}</a>
             <span class="fr">{{ article.author }}</span>
         </div>
-        <div style="text-align: right">{% for tag in article.tags %} {{ frontmacros.tag(tag, url_toggle_tag, selected_tag_names = selected_tag_names, toogle_tag = True) }} {% endfor %}</div>
+        <div style="text-align: right">{% for tag in article.tags %}
+            {{ frontmacros.tag(tag, url_toggle_tag, selected_tag_names = selected_tag_names, toogle_tag = True) }} {% endfor %}</div>
         <h2 class="item-title">
-            <a href="{{ url_for('front.details', publication_id=article['id']) }}">{{ article['title']|safe }}</a>
+            <a href="{{ url_for('front.article_details', publication_id=article['id']) }}">{{ article['title']|safe }}</a>
         </h2>
         <div class="item-short-content">
             <script type="text/javascript">
@@ -86,3 +96,9 @@
 {% else %}
     <h1>{{ _('There are no articles in this division') }}</h1>
 {% endfor %}
+
+{% block pager %}{% if pages and articles %}
+    {% include 'partials/pager.html' %}
+{% endif %}{% endblock pager %}
+
+
