--- a/profapp/templates/front/bird/layout.html
+++ b/profapp/templates/front/bird/layout.html
@@ -6,9 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 </head>
 
-<body {% if member_company %}
-    class="member-company"
-{% endif %}>
+<body>
 <script>
     window.addEventListener("message", function (messageevent) {
         if (messageevent.data && messageevent.data.profireader_session_id) {
@@ -18,32 +16,23 @@
     }, false);
     $('body').prepend('<iframe style="position: absolute; width: 1px; height: 1px; visibility: none; left: -1px;" src="https://profireader.com/tools/SSO/' + $.cookie('beaker.session.id') + '/"></iframe>');
 </script>
-{% include 'nav.html' %}
-<br/>
-<br/>
+{% block header %}{% include 'header.html' %}{% endblock header %}
+
 <div class="container">
-
     <div class="row site-content">
-        {% if member_company %}
-            {% include 'company_nav.html' %}
-        {% endif %}
-
-        <!-- Blog Entries Column -->
-        <div class="col-md-9">
-            {% block content %}{% endblock content %}
-            {% if pages and articles %}
-                {% include 'partials/pager.html' %}
-            {% endif %}
-        </div>
-        <div class="col-md-3">
-            {% include 'search_block.html' %}<br/><br/>
-            <a href="#" class="right_banner_1">{{ portal.advs['right_banner_1']|safe }}</a>
-            <a href="#" class="right_banner_2">{{ portal.advs['right_banner_2']|safe }}</a>
-        </div>
+        {% block content %}
+            {% block top_content %}{% endblock top_content %}
+            <div class="col-md-9">
+                {% block left_content %}{% endblock left_content %}
+            </div>
+            <div class="col-md-3">
+                {% block right_content %}{% endblock right_content %}
+            </div>
+            {% block bottom_content %}{% endblock bottom_content %}
+        {% endblock content %}
     </div>
 </div>
-
-{% include 'footer.html' %}
+{% block footer %}{% include 'footer.html' %}{% endblock footer %}
 
 </body>
 </html>
