--- a/profapp/templates/front/clover/division_catalog.html
+++ b/profapp/templates/front/clover/division_catalog.html
@@ -1,7 +1,8 @@
-{# division catalog in bird layout #}
-{% import 'partials/front-macros.html' as frontmacros %}
+{% import '_common/macros.html' as frontmacros %}
 {% extends 'layout.html' %}
-{% block content %}
+
+
+{% block left_content %}
     {% for member_id, member in members.items() %}
         <div class="block-item company-item">
         {% if member['tags'] %}
@@ -16,7 +17,7 @@
             <img src="//static.profireader.com/static/images/0.gif" class="block-item-img bg-contain"
                  style="background-image:url({{ fileUrl(member['company']['logo_file_id']) }});"/>
 
-            !<a href="{{ url_for('front.company_member', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}">{{ di.name }}</a>!
+            <a href="{{ url_for('front.company_member', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}">{{ member['company']['name'] }}</a>
             <br/><br/>
             {{ member['company']['short_description']|safe }}
             {%  if member['company']['country'] != '' %}
@@ -29,4 +30,4 @@
 
     {% endfor %}
 
-{% endblock content %}
+{% endblock %}
