--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -20,7 +20,7 @@
             $scope.url_update_publication = {{ raw_url_for('article.article_show_form')|safe }};
             $scope.url_search_article = {{ raw_url_for('portal.publications_load')|safe }};
 
-            $scope.url_front_publication_details = {{ raw_url_for('front.details')|safe }};
+            $scope.url_front_publication_details = {{ raw_url_for('front.article_details')|safe }};
             $scope.url_front_publication_division = {{ raw_url_for('front.division')|safe }};
 
             $scope.url_front_publication_division_host = function (division_name, host) {
