--- a/profapp/templates/front/leaf/catalog.html
+++ b/profapp/templates/front/leaf/catalog.html
@@ -1,17 +1,11 @@
 {# division catalog in bird layout #}
-
+{% extends 'layout.html' %}
 {% block content %}
 
     {% for member_id, member in members.items() %}
         <div class="block-item company-item">
 
-        {% if member['tags'] %}
-        <div class="item-tags fr">
-            {% for tag in member['tags'] %}
-                <span class="label label-danger"><a href="#">{{ tag.text }}</a></span>
-            {% endfor %}
-        </div>
-        {% endif %}
+
 
             <img src="//static.profireader.com/static/images/0.gif" class="block-item-img bg-contain"
                  style="background-image:url({{ fileUrl(member['company']['logo_file_id']) }});"/>
