--- a/profapp/static/front/css/style.css
+++ b/profapp/static/front/css/style.css
@@ -267,7 +267,7 @@ footer .btn-social-icon {
 }
 
 .block-item .item-type {
-    font-size: 16px;
+    font-size: 20px;
     color: #7d7d7d;
     padding-left: 18px;
     background: transparent url("../img/article/icons/type.png") no-repeat left center;
@@ -675,11 +675,14 @@ footer .promo {
 
 .col-md-9 {
     padding-right: 0;
+    padding-top: 45px;
+
 }
 
 .col-md-3 {
     /*width: 215px;*/
     padding-left: 17.5px;
+    padding-top: 50px;
 }
 
 /* --------------------------------------------------- */
@@ -715,15 +718,16 @@ footer .promo {
 
 .subportal-cover {
     width: 100%;
-    height: 150px;
+    height: auto;
     background-color: #fff;
     overflow: hidden;
     text-align: center;
 }
 
 .subportal-cover img {
-    height: 150px;
+    height: 100px;
     width: auto;
+    margin-top: 50px;
     /*background-color: #fff;*/
     /*margin-right: 1em;*/
 }
@@ -733,7 +737,7 @@ footer .promo {
 .block-item-img {
     margin-left: 0px;
     width: 300px;
-    height: 240px;
+    height: 245px;
     /*border: 1px solid #f00;*/
     border: none !important;
 
