--- a/profapp/templates/front/_common/block_pager.html
+++ b/profapp/templates/front/_common/block_pager.html
@@ -1,47 +1,39 @@
-{% if pages is defined %}
-    {% if pages > 1 %}
-        <div class="container">
-            <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-7">
-                <ul class="pager" style="margin-left: -245px">
-                    {% for button in range(page_buttons)|reverse %}
-                        {% if current_page - (button + 1)> 0 %}
-                            <li>
-                                <a href="{{ url_page(page=current_page - (button + 1)) }}">{{ current_page - (button + 1) }}</a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                    <li class="current-page">
-                        <a href="{{ url_page(page=current_page) }}" style="background-color: #eee;">{{ current_page }}</a>
-                    </li>
-                    {% for button in range(page_buttons) %}
-                        {% if current_page + (button + 1)< pages %}
-                            <li>
-                                <a href="{{ url_page(page=current_page + (button + 1)) }}">{{ current_page + (button + 1) }}</a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if current_page + page_buttons < pages %}
-                        <li>
-                            ...
-                        </li>
-                    {% endif %}
-                    {% if current_page != pages %}
-                        <li>
-                            <a href="{{ url_page(page=pages) }}">{{ pages }}</a>
-                        </li>
-                    {% endif %}
+<div class="container">
+    <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-7">
+        <ul class="pager" style="margin-left: -245px">
+            {% if pager.current>1 %}
+                <li>
+                    <a href="{{ pager.url_construct(page=1) }}">{{ 1 }}</a>
+                </li>
+            {% endif %}
+            {% if pager.current-pager.neighbours>2 %}
+                <li>...</li>
+            {% endif %}
 
-                    <li class="next">
-                        {% if current_page != pages %}
-                            <a href="{{ url_page(page=current_page + 1) }}"><i></i></a>
-                        {% else %}
-                        {% endif %}
-                    </li>
-                </ul>
-                <div class="col-md-3">
-                    <a href="#" class="bottom_banner_1">{{ portal.advs['bottom_banner']|safe }}</a>
-                </div>
-            </div>
+            {% for pg in range(2 if 2 > pager.current-pager.neighbours else pager.current-pager.neighbours, pager.current) %}
+                <li>
+                    <a href="{{ pager.url_construct(page=pg) }}">{{ pg }}</a>
+                </li>
+            {% endfor %}
+            <li class="current-page">
+                <a href="{{ pager.url_construct(page=1) }}" style="background-color: #eee;">{{ pager.current }}</a>
+            </li>
+            {% for pg in range(pager.current+1, pager.current+pager.neighbours + 1 if pager.current+pager.neighbours < pager.total - 1 else pager.total) %}
+                <li>
+                    <a href="{{ pager.url_construct(page=pg) }}">{{ pg }}</a>
+                </li>
+            {% endfor %}
+            {% if pager.current+pager.neighbours<pager.total - 1 %}
+                <li>...</li>
+            {% endif %}
+            {% if pager.current<pager.total %}
+                <li>
+                    <a href="{{ pager.url_construct(page=pager.total) }}">{{ pager.total }}</a>
+                </li>
+            {% endif %}
+        </ul>
+        <div class="col-md-3">
+            <a href="#" class="bottom_banner_1">{{ portal.advs['bottom_banner']|safe }}</a>
         </div>
-    {% endif %}
-{% endif %}
+    </div>
+</div>
