--- a/profapp/templates/front/_common/block_menu.html
+++ b/profapp/templates/front/_common/block_menu.html
@@ -19,7 +19,7 @@
                             </li>
                         {% elif di.portal_division_type_id in ['company_subportal'] %}
                             <li {% if di.id == division.id %}class="active"{% endif %}>
-                                <a href=" {{ url_for('front.company_member', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>
+                                <a href=" {{ url_for('front.company_page', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>
                             </li>
                         {% elif di.portal_division_type_id in ['index'] %}
                         {% else %}
