--- a/profapp/templates/front/clover/article/short.html
+++ b/profapp/templates/front/clover/article/short.html
@@ -13,7 +13,7 @@
         <div>{{ article.short }}</div>
     </div>
     <div class="item-additional-info">
-        <a href="{{ url_for('front.division', member_company_name = article['company']['name']) }}"
+        <a href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}"
            class="item-company">{{ article['company']['name']|safe }}</a>
         <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
     </div>
