--- a/profapp/templates/front/clover/company/menu.html
+++ b/profapp/templates/front/clover/company/menu.html
@@ -8,25 +8,25 @@
 
     <ul class="nav navbar-nav">
 
-        <li {% if company_menu_selected_item == 'about' %}class="active"{% endif %}><a href="{{ url_for('front.company_member',
+        <li {% if company_menu_selected_item == 'about' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name']) }}" >{{ _('About') }}</a></li>
 
         {% for division_id, division in portal.divisions.items() %}
             {% if division.portal_division_type_id == 'news' or division.portal_division_type_id == 'events' %}
                 <li {% if current_subportal_division and division.id == current_subportal_division.id %}class="active"{% endif %}>
-                    <a href="{{ url_for('front.company_member',
+                    <a href="{{ url_for('front.division',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'],
-                                   division_name=division.name, page=1, search_text='') }}" class="active">{{ division.name }}</a>
+                                   division_name=division.name) }}" class="active">{{ division.name }}</a>
                 </li>
             {% endif %}
         {% endfor %}
 
-        <li {% if company_menu_selected_item == 'address' %}class="active"{% endif %}><a href="{{ url_for('front.company_member',
+        <li {% if company_menu_selected_item == 'address' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'], member_company_page = 'address') }}">{{ _('Address') }}</a></li>
-        <li {% if company_menu_selected_item == 'contacts' %}class="active"{% endif %}><a href="{{ url_for('front.company_member',
+        <li {% if company_menu_selected_item == 'contacts' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'], member_company_page = 'contacts') }}">{{ _('Contacts') }}</a></li>
     </ul>
