--- a/profapp/templates/front/clover/division_catalog.html
+++ b/profapp/templates/front/clover/division_catalog.html
@@ -17,7 +17,7 @@
             <img src="//static.profireader.com/static/images/0.gif" class="block-item-img bg-contain"
                  style="background-image:url({{ fileUrl(member['company']['logo_file_id']) }});"/>
 
-            <a href="{{ url_for('front.company_member', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}">{{ member['company']['name'] }}</a>
+            <a href="{{ url_for('front.company_page', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}">{{ member['company']['name'] }}</a>
             <br/><br/>
             {{ member['company']['short_description']|safe }}
             {%  if member['company']['country'] != '' %}
