--- a/profapp/templates/front/clover/division_index.html
+++ b/profapp/templates/front/clover/division_index.html
@@ -25,5 +25,5 @@
         <h1>{{ _('There are no articles in this division') }}</h1>
     {% endfor %}
 
-    {% block pager %}{% if pages and articles %}{% include '_common/block_pager.html' %}{% endif %}{% endblock pager %}
+    {% include '_common/block_pager.html' %}
 {% endblock %}
