clover front, front controller

--- a/profapp/templates/front/_common/block_head.html
+++ b/profapp/templates/front/_common/block_head.html
@@ -26,8 +26,8 @@
 <link href="//static.profireader.com/static/front/css/style.css" rel="stylesheet">
 <link rel="stylesheet" href="//static.profireader.com/static/css/oles.css">
 <link href="//static.profireader.com/static/css/article.css" rel="stylesheet">
-<link href="//static.profireader.com/static/front/bird/css/article.css" rel="stylesheet">
-<link href="//static.profireader.com/static/front/bird/css/style.css" rel="stylesheet">
+<link href="//static.profireader.com/static/front/{{ portal.layout.name }}/css/article.css" rel="stylesheet">
+<link href="//static.profireader.com/static/front/{{ portal.layout.name }}/css/style.css" rel="stylesheet">
 
 {{ config_variables()|safe }}
 
