--- a/profapp/templates/front/clover/company_about.html
+++ b/profapp/templates/front/clover/company_about.html
@@ -1,4 +1,4 @@
-{% extends 'company_layout.html' %}
+{% extends 'layout_company_page.html' %}
 
 {% block company_content %}
     {{ member_company['about']|safe }}
