--- a/profapp/templates/front/_common/block_search.html
+++ b/profapp/templates/front/_common/block_search.html
@@ -5,8 +5,8 @@
         <button class="btn btn-default search-btn" type="submit"><span
                 class="glyphicon glyphicon-search"></span></button>
     </form>
-    {% for tag in all_tags %}
-        {{ frontmacros.tag(tag, url_toggle_tag, selected_tag_names = selected_tag_names, toogle_tag = True) }}
+    {% for tag in tags.all %}
+        {{ frontmacros.tag(tag, tags.url_construct_toggle, selected_tag_names = tags.selected_names, toogle_tag = True) }}
     {% endfor %}
     <br/><br/>
 {% endif %}
