--- a/profapp/templates/front/clover/article_details.html
+++ b/profapp/templates/front/clover/article_details.html
@@ -11,9 +11,9 @@
 
 {% block left_content %}
     {% if article_visibility %}
-        {% include 'article/social.html' %}
-        {% include 'article/long.html' %}
+        {% include 'article_social.html' %}
+        {% include 'article_long.html' %}
     {% else %}
-        {% include 'article/unavailable.html' %}
+        {% include 'article_unavailable.html' %}
     {% endif %}
 {% endblock %}
