--- a/profapp/templates/front/clover/article_short.html
+++ b/profapp/templates/front/clover/article_short.html
@@ -4,7 +4,7 @@
         <span class="fr">{{ article.author }}</span>
     </div>
     <div style="text-align: right">{% for tag in article.tags %}
-        {{ frontmacros.tag(tag, url_toggle_tag, selected_tag_names = selected_tag_names, toogle_tag = True) }} {% endfor %}</div>
+        {{ frontmacros.tag(tag, tags.url_construct_toggle, selected_tag_names = tags.selected_names, toogle_tag = True) }} {% endfor %}</div>
     <h2 class="item-title">
         <a href="{{ url_for('front.article_details', publication_id=article['id'], publication_title=article['title']) }}">{{ article['title']|safe }}</a>
     </h2>
