--- a/profapp/templates/front/clover/company_menu.html
+++ b/profapp/templates/front/clover/company_menu.html
@@ -2,7 +2,6 @@
 
     <div class="subportal-cover">
         <img src="{{ fileUrl(member_company['logo_file_id']) }}"/>
-        {#        {{ member_company['short_description']|safe }}#}
     </div>
 
 
@@ -10,25 +9,27 @@
 
         <li {% if company_menu_selected_item == 'about' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
-                                   member_company_name = member_company['name']) }}" >{{ _('About') }}</a></li>
+                                   member_company_name = member_company['name']) }}">{{ _('About') }}</a></li>
 
         {% for division_id, division in portal.divisions.items() %}
             {% if division.portal_division_type_id == 'news' or division.portal_division_type_id == 'events' %}
-                <li {% if current_subportal_division and division.id == current_subportal_division.id %}class="active"{% endif %}>
+                <li {% if 'id' in company_menu_selected_item and company_menu_selected_item['id'] == division.id %}class="active"{% endif %}>
                     <a href="{{ url_for('front.division',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'],
-                                   division_name=division.name) }}" class="active">{{ division.name }}</a>
+                                   division_name=division.name) }}">{{ division.name }}</a>
                 </li>
             {% endif %}
         {% endfor %}
 
         <li {% if company_menu_selected_item == 'address' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
-                                   member_company_name = member_company['name'], member_company_page = 'address') }}">{{ _('Address') }}</a></li>
+                                   member_company_name = member_company['name'], member_company_page = 'address') }}">{{ _('Address') }}</a>
+        </li>
         <li {% if company_menu_selected_item == 'contacts' %}class="active"{% endif %}><a href="{{ url_for('front.company_page',
                                    member_company_id = member_company['id'] ,
-                                   member_company_name = member_company['name'], member_company_page = 'contacts') }}">{{ _('Contacts') }}</a></li>
+                                   member_company_name = member_company['name'], member_company_page = 'contacts') }}">{{ _('Contacts') }}</a>
+        </li>
     </ul>
 
 </div>
