--- a/profapp/templates/front/_common/html.html
+++ b/profapp/templates/front/_common/html.html
@@ -4,6 +4,6 @@
 <head>{% block head %}{% include 'block_head.html' %}{% endblock head %}</head>
 <body>
 {% include 'sso.html' %}
-{% block body %}{% include 'block_header.html' %}{% endblock %}
+{% block body %}{% endblock %}
 </body>
 </html>
