elastic search update on material/publication changes (via events)

--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -137,6 +137,7 @@
                     </div>
 
                     {{ _('Author') }}
+                    <pr_help_tooltip>article_author</pr_help_tooltip>
                     <input class="form-control article-edit-input" ng-model="data.material.author"
                            pr-validation-answer="data_validation:author"
                            name="article_author" jng-pattern="/[\wа-яёі']{2}/i">
