--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -122,7 +122,7 @@
                         <li ng-if="user.tos"><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                                 class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
-                        <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Help information') }}"
+                        <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Help information') }}" target="_blank"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-info"></i><span>{{ _('Help information') }}</span></a></li>
                         <li class="info-padding"><a pr_test="Tutorial" href="{{ url_tutorial() }}" title="{{ _('tutorial') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
