--- a/profapp/templates/company/company_employee_details.html
+++ b/profapp/templates/company/company_employee_details.html
@@ -36,10 +36,10 @@
 
         <h2>
             <img class="person-small-cover" pr-image pr-no-image="{{ employee.profireader_small_avatar_url }}"/>
-            <img class="logo-small-cover" pr-image="employer.logo_file_id"/>
+            <img class="logo-small-cover" pr-image-url="employer.logo.url"/>
             {{ _('Employee `%(employee.profireader_name)s` at company `%(employer.name)s`') }}</h2>
 
-        <img pr-image="employer.logo_file_id"/>
+        <img pr-image-url="employer.logo.url"/>
         {{ _('status') }} {{ employment.status }}<br>
         {{ _('position') }} {{ employment.position }}<br>
         {{ _('permissions') }}<br>
