--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -111,7 +111,7 @@
 
                         <!-- TODO: MY by OZ: 400x300 -> some class -->
                         <img ng-show="!editing" style="width: 400px; height: 300px; position: relative"
-                             pr-image="data.logo_file_id" alt="image">
+                             pr-image-url="data.logo.url" alt="image">
 
                         <div ng-if="editing">
                         <div style="width: 400px; height: 300px; position: relative"
