--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -98,7 +98,7 @@
                         type: 'link',
                         target: 'front',
                         href: 'url_front_publication_index_host(row.entity.portal.host)',
-                        img: 'portal.logo_file_id'
+                        img_url: 'portal.logo.url'
                     }
                     , {
                         name: 'publication.division.name', type: 'link', target: 'front',
