company logo association proxy

--- a/profapp/templates/company/company_partner_details.html
+++ b/profapp/templates/company/company_partner_details.html
@@ -29,9 +29,9 @@
     <div ng-controller="company_partner_details" ng-cloak>
         <h2>
             <img class="person-small-cover" pr-image-url ="member.company.logo.url"/>
-            <img class="logo-small-cover" pr-image-url="employeer.logo.url"/>
+            <img class="logo-small-cover" pr-image-url="{{ employeer.logo.url }}"/>
             {{ _('Portal partner `%(member.company.name)s` at company `%(employeer.name)s`') }}</h2>
-        <img pr-image-url="employer.logo.url"/>
+        <img pr-image-url="{{ employer.logo.url }}"/>
         {{ _('status') }} {{ member.status }}<br>
         <div ng-class="{disabled: !permitted}" ng-repeat="(right_name, permitted) in member.rights">
             <img src="//static.profireader.com/static/images/0.gif"
