--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -544,3 +544,7 @@ div.pr-row:last-child div.pr-cell {
     top: 45%;
 }
 
+
+.company-profile-logo-img {
+    width: 400px; height: 300px; position: relative
+}
