--- a/profapp/templates/front/clover/company_menu.html
+++ b/profapp/templates/front/clover/company_menu.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse navbar-inverse subportal" id="bs-example-navbar-collapse-1">
 
     <div class="subportal-cover">
-        <img src="{{ fileUrl(member_company['logo_file_id']) }}"/>
+        <img width="300" height="300" {{ prImageUrl(member_company['logo']['url']) }} />
     </div>
 
 
